Fixed layout bug in mobile

--- a/sass/3-section/_1-implementation.sass
+++ b/sass/3-section/_1-implementation.sass
@@ -84,6 +84,7 @@
                 .left
                     order: 2
                     width: 100%
+                    height: auto
 
                 .right
                     flex-direction: row
